--- a/src/messages/index.html
+++ b/src/messages/index.html
@@ -124,7 +124,7 @@
   <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
   <script src="/__/firebase/4.5.0/firebase-messaging.js"></script>
   <script src="/__/firebase/init.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/main.js?n=1"></script>
   <!--script src="scripts/matches.js"></script-->
 
 
