--- a/src/plan/index.html
+++ b/src/plan/index.html
@@ -30,7 +30,7 @@
               </a> 
             </div>
            
-              <div class="col s4 left hide-on-small-and-down">
+              <div class="col s4 left hide-on-med-and-down">
                <ul>
                   <li><a style="height:60px;color:black;font-size:14px;" href="#">Home</a></li>
                   <li><a style="height:60px;color:black;font-size:14px;" href="#">About</a></li>
@@ -56,172 +56,134 @@
         <section id="content">
           <div class="container">
             <div class="center-align" align="center" style="margin-top:15px;font-size:26px;color:white;">Select Your Plan</div>
-            <div id="pricing-page" class="section">
-              <div class="row animate-bottom">
-                <div class="card" style="padding:5px;">
-                  <div id="freeTrialHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
+            <div id="pricing-page" class="center-align section animate-bottom">
+
+              <div class="row valign-wrapper col s12">
+                 <div class="card col s6" style="margin-right:15px;padding:10px;">
+                  <div id="freeTrialHeader" class="card-content" style="margin:0px;padding:0px;height:80px;">
                     <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
-                         <p class="center-align valign-wrapper" >
-                          <input class="with-gap" value=0 name="group1" type="radio" id="freeTrialRadio"  />
-                          <label id="free" for="freeTrialRadio" style="height:50%;color:#6F6F6F;font-size:16px;">Free Trial</label>
+                      <div class="valign-wrapper col s5" style="height:100%;">
+                         <p class="center-align valign-wrapper" style="height:80%;">
+                          <input class="with-gap" value="1" name="group1" type="radio" id="freeTrialRadio"  />
+                          <label id="free" class="valign-wrapper" for="freeTrialRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">Free Trial</label>
                         </p>
                       </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
+                      <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
                          <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
-                          <label id="freeL" style="height:auto;color:#6F6F6F;font-size:16px;">&nbsp;&nbsp;&nbsp;$0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
+                            <hr class="hide-on-small-and-down vertical" style="width:0px; height:80%;"/>
+                            <label id="freeL" style="height:auto;color:#6F6F6F;font-size:16px;">$0/mo</label>
                         </p>
-                      </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="freeP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
-
                     </div>
                   </div>
                 </div>
              </div>
-             <div class="card" style="padding:2px;">
-                  <div id="oneMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
+
+             <div class="card col s6" style="margin-right:15px;padding:10px;">
+                  <div id="oneMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;">
                     <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
+                      <div class="valign-wrapper col s5" style="height:100%;">
                          <p class="center-align valign-wrapper" style="height:80%;">
                           <input class="with-gap" value="1" name="group1" type="radio" id="oneMonthRadio"  />
                           <label id="one" class="valign-wrapper" for="oneMonthRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">1 Month</label>
                         </p>
                       </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
+                      <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
                          <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
-                          <label id="oneL" style="height:auto;color:#6F6F6F;font-size:16px;">$40/mo</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
+                            <hr class="vertical hide-on-small-and-down" style="width:0px; height:80%;"/>
+                            <label id="oneL" style="height:auto;color:#6F6F6F;font-size:16px;">$40/mo</label>
                         </p>
-                      </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="oneP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
-
                     </div>
                   </div>
                 </div>
              </div>
-             <div  class="card" style="padding:2px;">
-                  <div id="threeMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
+           </div>
+           <div class="row valign-wrapper col s12">
+             <div class="card col s6" style="margin-right:15px;padding:10px;">
+                  <div id="threeMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;">
                     <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
+                      <div class="valign-wrapper col s5" style="height:100%;">
                          <p class="center-align valign-wrapper" style="height:80%;">
                           <input class="with-gap" value="3" name="group1" type="radio" id="threeMonthRadio"  />
                           <label id="three" class="valign-wrapper" for="threeMonthRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">3 Months</label>
                         </p>
                       </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
+                      <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
                          <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
+                          <hr class="vertical hide-on-small-and-down" style="width:0px; height:80%;"/>
                           <label id="threeL" style="height:auto;color:#6F6F6F;font-size:16px;">$36/mo</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
                         </p>
                       </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="threeP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
-
-                    </div>
                   </div>
                 </div>
              </div>
-             <div class="card" style="padding:2px;">
-                  <div id="sixMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
+             <div class="card col s6" style="margin-right:15px;padding:10px;">
+                  <div id="sixMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;">
                     <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
+                      <div class="valign-wrapper col s5" style="height:100%;">
                          <p class="center-align valign-wrapper" style="height:80%;">
-                          <input class="with-gap" value="6" name="group1" type="radio" id="sixMonthRadio"  />
+                          <input class="with-gap" value="3" name="group1" type="radio" id="sixMonthRadio"  />
                           <label id="six" class="valign-wrapper" for="sixMonthRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">6 Months</label>
                         </p>
                       </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
+                      <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
                          <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
+                          <hr class="vertical hide-on-small-and-down" style="width:0px; height:80%;"/>
                           <label id="sixL" style="height:auto;color:#6F6F6F;font-size:16px;">$34/mo</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
                         </p>
                       </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="sixP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
-
-                    </div>
                   </div>
                 </div>
              </div>
-             <div class="card" style="padding:2px;">
-                  <div id="nineMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
+             
+           </div>
+           <div class="row valign-wrapper col s12">
+             <div class="card col s6" style="margin-right:15px;padding:10px;">
+                  <div id="nineMonthHeader" class="card-content" style="margin:0px;padding:0px;height:80px;">
                     <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
+                      <div class="valign-wrapper col s5" style="height:100%;">
                          <p class="center-align valign-wrapper" style="height:80%;">
-                          <input class="with-gap" value="9" name="group1" type="radio" id="nineMonthRadio"  />
+                          <input class="with-gap" value="3" name="group1" type="radio" id="nineMonthRadio"  />
                           <label id="nine" class="valign-wrapper" for="nineMonthRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">9 Months</label>
                         </p>
                       </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
+                      <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
                          <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
-                          <label id="nineL" style="height:auto;color:#6F6F6F;font-size:16px;">$32/mo</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
+                          <hr class="vertical hide-on-small-and-down" style="width:0px; height:80%;"/>
+                          <label id="nineL" style="height:auto;color:#6F6F6F;font-size:16px;">$34/mo</label>
                         </p>
                       </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="nineP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
-
-                    </div>
                   </div>
                 </div>
              </div>
-             <div class="card" style="padding:2px;">
-                  <div id="twelveMonthHeader" class="card-content" style="margin-left:0px;padding:0px;height:80px;width:100%">
-                    <div class="row" style="height:100%;">
-                      <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
-                         <p class="center-align valign-wrapper" style="height:80%;">
-                          <input class="with-gap" value="12" name="group1" type="radio" id="twelveMonthRadio"  />
-                          <label id="twelve" class="valign-wrapper" for="twelveMonthRadio" style="margin-left:5px;height:50%;color:#6F6F6F;font-size:16px;">12 Months</label>
-                        </p>
-                      </div>
-
-                      <div class="valign-wrapper col s2" style="height:100%;max-width:130px;margin-right:5px;">
-                         <p class="center-align valign-wrapper" style="height:auto;">
-                          <hr class="vertical" style="margin-right:25px;width:0px; height:80%;"/>
-                          <label id="twelveL" style="height:auto;color:#6F6F6F;font-size:16px;">$30/mo</label>
-                          <hr class="vertical" style="margin-left:25px;width:0px; height:80%;"/>
-                        </p>
-                      </div>
-                       <div class="valign-wrapper col s7 hide-on-small-and-down" style="min-width:160px;height:100%;">
-                         <p id="twelveP" class="center-align valign-wrapper" style="font-size:14px;text-align:left;overflow-wrap:break-word;white-space:normal; height:100%;">
-                         Nullam ornare rhoncus turpis, eget consectetur ipsum consequat at. Praesent non mi orci.
-                        </p>
+             <div class="card col s6" style="margin-right:15px;padding:10px;">
+                <div id="twelveMonthHeader" class="card-content" style="margin:0px;padding:5px;height:80px;">
+                  <div class="row" style="height:100%;">
+                    <div class="valign-wrapper col s5" style="height:100%;">
+                       <p class="center-align valign-wrapper" style="height:80%;">
+                        <input class="with-gap" value="3" name="group1" type="radio" id="twelveMonthRadio"  />
+                        <label id="twelve" class="valign-wrapper" for="twelveMonthRadio" style="height:50%;color:#6F6F6F;font-size:16px;">12 Months</label>
+                      </p>
                     </div>
-                  </div>
+                    <div class="valign-wrapper col s5" style="height:100%;margin-right:5px;margin-left:5px;">
+                       <p class="center-align valign-wrapper" style="height:auto;">
+                        <hr class="vertical hide-on-small-and-down" style="width:0px; height:80%;"/>
+                        <label id="twelveL" style="height:auto;color:#6F6F6F;font-size:16px;">$34/mo</label>
+                      </p>
+                    </div>
                 </div>
+              </div>
              </div>
-            </div><!--/profile-page-->
-            <div class="right-align">
-              <a id="selectPlan" style="width:160px;height:40px;font-size:12px;padding:1px;" class="waves-effect waves-red btn">Proceed To Checkout</a>
-            </div>
-          </div><!--container-->
-        </div>
+           </div>
+         </div>
+          <div class="right-align" style="margin-bottom:20px;">
+            <a id="selectPlan" style="width:160px;height:40px;font-size:12px;padding:1px;" class="waves-effect waves-red btn">Proceed To Checkout</a>
+          </div>
+         </div>
+        </div><!--/profile-page-->
       </section>
     </div>
   </div>
+ 
    <footer class="page-footer" style="background-color:#333333">
       <div class="footer-copyright">
         <div class="container">
